Se crea el archivo del header donde voy a crear mis aportes para que no haya conflictos

--- a/css/style.css
+++ b/css/style.css
@@ -3,5 +3,8 @@ body{
     padding: 0; 
     margin: 5px; 
     color: Black; 
-    background-color: WhiteSmoke;
+}
+
+.main-container{
+    background: #f8f9fa;
 }
