--- a/src/header/header.css
+++ b/src/header/header.css
@@ -31,8 +31,18 @@
     color: ghostwhite;
 }
 
+.twitter-container{
+    height: 100px;
+    width: 480px;
+}
 
-
+.twitter-icon{
+    height: 25px; 
+    width: 25px; 
+    background: white; 
+    border-radius: 50%; 
+    border: solid white;
+}
 /* Clases opcionales */
 .content{
     margin-top: 80px;
