--- a/src/css/header.css
+++ b/src/css/header.css
@@ -11,9 +11,12 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    box-shadow: 0px 3px 3px -2px #FE850C, 0px 3px 4px 0px #FE850C, 0px 1px 8px 0px #FE850C;
+    box-shadow: 0px 0px 0px 0.8px #FE850C, 0px 0px 4px 0px #FE850C, 0px 1px 8px 0px #FE850C;
 }
 
+.footer{
+    margin-bottom: 75px;
+}
 .footer .navbar {
     background: #333;
 }
@@ -31,25 +34,11 @@
     color: ghostwhite;
 }
 
-.twitter-container{
-    height: 100px;
-    width: 480px;
-}
-
-.twitter-icon{
+.social-media-icon{
     height: 25px; 
     width: 25px; 
+    color: black;
     background: white; 
     border-radius: 50%; 
     border: solid white;
-}
-/* Clases opcionales */
-.content{
-    margin-top: 80px;
-    background: #f8f9fa;
-}
-
-body{
-    font-family: 'Open Sans',sans-serif;
-    color: #014D65 !important;
 }
