--- a/src/css/index.css
+++ b/src/css/index.css
@@ -4,10 +4,18 @@ body{
     margin: 5px; 
     color: #014D65 !important;
 }
-
 .content{
     margin-top: 80px;
+    padding: 15px;
     background: #f8f9fa;
+    box-shadow: 0px 3px 3px -2px rgba(0,0,0,0.2), 0px 3px 4px 0px rgba(0,0,0,0.14), 0px 1px 8px 0px rgba(0,0,0,0.12);
 }
 
+.pushbar-container{
+    box-shadow: 0px 3px 3px -2px rgba(0,0,0,0.2), 0px 3px 4px 0px rgba(0,0,0,0.14), 0px 1px 8px 0px rgba(0,0,0,0.12);
+}
 
+.twitter-container{
+    height: 100px;
+    width: 480px;
+}
